# pixel-lamp

./: LICENSE  README.md
animator/: CMakeLists.txt  animator.cpp
arduino/include/: animation.h  board.h  led_matrix.h
arduino/include/animations/: bmp.h  evs.h  hue.h  pong.h  rain.h  rainbow.h  static_color.h
arduino/src/: animation.cpp  led_matrix.cpp  main.cpp
include/: animation.h  board.h  led_matrix.h  pins.h  rotary.h
include/animations/: hue.h
src/: animation.cpp  led_matrix.cpp  main.cpp
